; ModuleID = '/home/carl/AnghaBench/lab/engine/code/ui/extr_ui_atoms.c_UI_DrawNamedPic.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/ui/extr_ui_atoms.c_UI_DrawNamedPic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UI_DrawNamedPic(float %0, float %1, float %2, float %3, i8* %4) #0 {
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store float %0, float* %6, align 4
  store float %1, float* %7, align 4
  store float %2, float* %8, align 4
  store float %3, float* %9, align 4
  store i8* %4, i8** %10, align 8
  %12 = load i8*, i8** %10, align 8
  %13 = call i32 @trap_R_RegisterShaderNoMip(i8* %12)
  store i32 %13, i32* %11, align 4
  %14 = call i32 @UI_AdjustFrom640(float* %6, float* %7, float* %8, float* %9)
  %15 = load float, float* %6, align 4
  %16 = load float, float* %7, align 4
  %17 = load float, float* %8, align 4
  %18 = load float, float* %9, align 4
  %19 = load i32, i32* %11, align 4
  %20 = call i32 @trap_R_DrawStretchPic(float %15, float %16, float %17, float %18, i32 0, i32 0, i32 1, i32 1, i32 %19)
  ret void
}

declare dso_local i32 @trap_R_RegisterShaderNoMip(i8*) #1

declare dso_local i32 @UI_AdjustFrom640(float*, float*, float*, float*) #1

declare dso_local i32 @trap_R_DrawStretchPic(float, float, float, float, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
